--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta name="description" content="胖大喵 Pandacat 是一個專注毛孩生活用品設計與選物的品牌，從毛孩視角打造貓砂盆、貓籠與生活用品，每一件產品都由胖大喵親自試用。毛孩開心，主人放心。">
     <meta name="keywords" content="胖大喵, Pandacat, 寵物用品, 貓砂盆, 貓籠, 毛孩用品, 寵物選物店">
     <meta name="author" content="胖大喵 Pandacat">
-    <link rel="canonical" href="https://pandacat.tw/">
+    <link rel="canonical" href="https://pandacat.com.tw/">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="胖大喵 Pandacat｜優質寵物用品選物店">
     <meta property="og:description" content="胖大喵 Pandacat 是一個專注毛孩生活用品設計與選物的品牌，從毛孩視角打造貓砂盆、貓籠與生活用品。毛孩開心，主人放心。">
-    <meta property="og:url" content="https://pandacat.tw/">
-    <meta property="og:image" content="https://pandacat.tw/assets/og-image.png">
+    <meta property="og:url" content="https://pandacat.com.tw/">
+    <meta property="og:image" content="https://pandacat.com.tw/assets/og-image.png">
     <meta property="og:locale" content="zh_TW">
     <meta property="og:site_name" content="胖大喵 Pandacat">
 
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="胖大喵 Pandacat｜優質寵物用品選物店">
     <meta name="twitter:description" content="胖大喵 Pandacat 是一個專注毛孩生活用品設計與選物的品牌。毛孩開心，主人放心。">
-    <meta name="twitter:image" content="https://pandacat.tw/assets/og-image.png">
+    <meta name="twitter:image" content="https://pandacat.com.tw/assets/og-image.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
@@ -112,13 +112,13 @@
     "@type": "Organization",
     "name": "胖大喵 Pandacat",
     "alternateName": "Pandacat",
-    "url": "https://pandacat.tw",
-    "logo": "https://pandacat.tw/assets/logo.png",
+    "url": "https://pandacat.com.tw",
+    "logo": "https://pandacat.com.tw/assets/logo.png",
     "description": "胖大喵 Pandacat 是一個專注毛孩生活用品設計與選物的品牌",
     "sameAs": [
       "https://www.instagram.com/pandacat",
-      "https://www.threads.net/@pandacat",
-      "https://shopee.tw/pandacat"
+      "https://www.threads.net/@naiyo.meow_0425",
+      "https://shopee.tw/xuanling67"
     ]
   }
   </script>
@@ -146,7 +146,7 @@
                 </ul>
             </nav>
 
-            <a href="https://shopee.tw/pandacat" target="_blank" rel="noopener noreferrer" class="header__cta">
+            <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer" class="header__cta">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                     <path
                         d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
@@ -169,7 +169,7 @@
                 <li><a href="#products" class="mobile-nav__link">商品特色</a></li>
                 <li><a href="#story" class="mobile-nav__link">社群</a></li>
                 <li><a href="#faq" class="mobile-nav__link">FAQ</a></li>
-                <li><a href="https://shopee.tw/pandacat" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
                         class="mobile-nav__link">立即前往商店</a></li>
             </ul>
         </nav>
@@ -188,7 +188,7 @@
                     <p class="hero__subtitle">毛孩開心、主人放心</p>
 
                     <div class="hero__cta-group">
-                        <a href="https://shopee.tw/pandacat" target="_blank" rel="noopener noreferrer"
+                        <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
                             class="btn btn--primary">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 fill="currentColor">
@@ -208,14 +208,14 @@
                                     d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
                             </svg>
                         </a>
-                        <a href="https://www.threads.net/@pandacat" target="_blank" rel="noopener noreferrer"
+                        <a href="https://www.threads.net/@naiyo.meow_0425" target="_blank" rel="noopener noreferrer"
                             class="hero__social-link" aria-label="Threads">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
                                     d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.017c.03-3.579.879-6.43 2.525-8.482C5.845 1.205 8.6.024 12.18 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.304-6.015-2.91.022-5.11.936-6.54 2.717C4.307 6.504 3.616 8.914 3.59 12c.025 3.086.718 5.496 2.057 7.164 1.432 1.781 3.632 2.695 6.54 2.717 2.623-.02 4.358-.631 5.8-2.045 1.647-1.613 1.618-3.593 1.09-4.798-.31-.71-.873-1.3-1.634-1.75-.192 1.352-.622 2.446-1.284 3.272-.886 1.102-2.14 1.704-3.73 1.79-1.202.065-2.361-.218-3.259-.801-1.063-.689-1.685-1.74-1.752-2.96-.065-1.182.408-2.256 1.332-3.023.88-.73 2.132-1.13 3.628-1.154 1.12-.018 2.14.124 3.063.426-.075-1.006-.32-1.78-.737-2.32-.526-.681-1.376-1.03-2.526-1.038h-.028c-.9.006-1.64.249-2.2.72l-1.322-1.57c.86-.722 2.024-1.12 3.476-1.15h.044c1.749.026 3.12.597 4.076 1.696.897 1.033 1.376 2.463 1.424 4.253.478.152.926.34 1.343.564 1.105.594 1.967 1.472 2.494 2.54.749 1.516.834 4.063-1.2 6.052-1.79 1.752-4.017 2.544-7.202 2.565zm-1.15-6.94c-.01 0-.02 0-.03 0-1.397.075-2.108.745-2.073 1.378.018.32.2.613.512.826.358.245.867.374 1.433.341 1.09-.058 1.9-.46 2.41-1.193.378-.544.596-1.24.652-2.073-.63-.157-1.322-.236-2.073-.229-.297.005-.575.02-.831.05z" />
                             </svg>
                         </a>
-                        <a href="https://shopee.tw/pandacat" target="_blank" rel="noopener noreferrer"
+                        <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
                             class="hero__social-link" aria-label="Shopee">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="products__cta">
-                    <a href="https://shopee.tw/pandacat" target="_blank" rel="noopener noreferrer"
+                    <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
                         class="btn btn--primary">
                         前往商店看更多
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
@@ -350,7 +350,7 @@
                                 </svg>
                                 Instagram
                             </a>
-                            <a href="https://www.threads.net/@pandacat" target="_blank" rel="noopener noreferrer"
+                            <a href="https://www.threads.net/@naiyo.meow_0425" target="_blank" rel="noopener noreferrer"
                                 class="story__social-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                                     <path
@@ -495,7 +495,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.threads.net/@pandacat" target="_blank" rel="noopener noreferrer"
+                            <a href="https://www.threads.net/@naiyo.meow_0425" target="_blank" rel="noopener noreferrer"
                                 class="footer__social-link" aria-label="Threads">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <path
@@ -504,7 +504,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://shopee.tw/pandacat" target="_blank" rel="noopener noreferrer"
+                            <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
                                 class="footer__social-link" aria-label="Shopee">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <path
@@ -518,7 +518,7 @@
 
             <div class="footer__bottom">
                 <p class="footer__copyright">© 2024 胖大喵 Pandacat. All rights reserved.</p>
-                <p class="footer__contact">聯繫我們：<a href="mailto:hello@pandacat.tw">hello@pandacat.tw</a></p>
+                <p class="footer__contact">聯繫我們：<a href="mailto:hello@pandacat.com.tw">hello@pandacat.com.tw</a></p>
             </div>
         </div>
     </footer>
