fix: 優化品牌主張區塊與按鈕文字 - 移除 why-us 背景色，使用網頁預設背景 - 按鈕文字改為「看看我們挑了什麼」

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <div class="products__cta">
                     <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
                         class="btn btn--primary">
-                        前往商店看更多
+                        看看我們挑了什麼
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="currentColor">
                             <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" />
