fix: 品牌主張文字加入換行以提升可讀性

--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
                     <h2 class="why-us__title">為什麼選胖大喵？</h2>
                     <div class="why-us__content">
                         <p class="why-us__text">
-                            因為養貓的日子，不只是換砂和倒飼料。
-                            是每天看到牠在窗邊曬太陽的樣子；
+                            因為養貓的日子，不只是換砂和倒飼料。<br>
+                            是每天看到牠在窗邊曬太陽的樣子；<br>
                             是加班到很晚，牠蹲在門口等你回家的那一刻。
                         </p>
                         <p class="why-us__text">
