update: 修改品牌文字，提升情感連結

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </svg>
                         </div>
                         <h3 class="value-card__title">懂毛孩</h3>
-                        <p class="value-card__desc">所有產品從毛孩視角設計，我們真的懂牠們需要什麼</p>
+                        <p class="value-card__desc">所有產品從毛孩視角挑選，我們真的懂牠們需要什麼</p>
                     </article>
 
                     <article class="value-card">
@@ -258,8 +258,8 @@
                                     d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
                             </svg>
                         </div>
-                        <h3 class="value-card__title">不亂吹</h3>
-                        <p class="value-card__desc">真的好用才推薦，不做噱頭，拒絕誇大不實的宣傳</p>
+                        <h3 class="value-card__title">真心推薦</h3>
+                        <p class="value-card__desc">每件用品都實際比較、體驗後才上架，沒有噱頭，只有值得放進家的選擇。</p>
                     </article>
 
                     <article class="value-card">
@@ -417,11 +417,11 @@
                         <p class="why-us__text">
                             因為養貓的日子，不只是換砂和倒飼料。<br>
                             是每天看到牠在窗邊曬太陽的樣子；<br>
-                            是加班到很晚，牠蹲在門口等你回家的那一刻。
+                            是下班回家，牠蹲在門口等你回家的那一刻。
                         </p>
                         <p class="why-us__text">
                             所以我們挑的每一件用品，
-                            都是自己願意放進家裡的。
+                            都是自己願意放進家裡的。<br>
                             能讓牠舒服，也讓你放心。
                         </p>
                     </div>
