feat: 建立靜態 Blog 系統 - 新增 Blog 列表頁與兩篇範例文章 - 完整 SEO 設定（Meta tags, Open Graph, JSON-LD） - 文章原始檔案含 JSON Metadata（未來可匯入） - Blog CSS 樣式（響應式設計） - 在首頁 Header 加入 Blog 連結 - URL 結構：/blog/{slug}.html

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     <li><a href="#values" class="header__nav-link">品牌理念</a></li>
                     <li><a href="#products" class="header__nav-link">商品特色</a></li>
                     <li><a href="#story" class="header__nav-link">社群</a></li>
+                    <li><a href="blog/index.html" class="header__nav-link">Blog</a></li>
                     <li><a href="#faq" class="header__nav-link">FAQ</a></li>
                 </ul>
             </nav>
