--- a/index.html
+++ b/index.html
@@ -290,16 +290,18 @@
                         <div class="product-carousel">
                             <div class="product-carousel__slides">
                                 <div class="product-carousel__slide active">
-                                    <img src="assets/product-litter-box-1.jpg" alt="為胖貓設計的全封閉貓砂盆 - 主圖" loading="lazy"
+                                    <img src="assets/product-litter-box-v2-1.jpg" alt="長通道不帶砂翻蓋式貓砂盆 - 產品主圖"
+                                        loading="lazy"
                                         onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🐱 貓砂盆實拍</div>';">
                                 </div>
                                 <div class="product-carousel__slide">
-                                    <img src="assets/product-litter-box-2.jpg" alt="三層抽屜特寫" loading="lazy"
-                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>📦 三層抽屜</div>';">
+                                    <img src="assets/product-litter-box-v2-2.png" alt="超大空間封閉式防外濺 - 白貓實拍" loading="lazy"
+                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>📦 超大空間</div>';">
                                 </div>
                                 <div class="product-carousel__slide">
-                                    <img src="assets/product-litter-box-3.jpg" alt="居家情境" loading="lazy"
-                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🏠 居家情境</div>';">
+                                    <img src="assets/product-litter-box-v2-3.png" alt="質感配色融入居家設計 - 綠色款實拍"
+                                        loading="lazy"
+                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🏠 質感配色</div>';">
                                 </div>
                             </div>
                             <button class="product-carousel__arrow product-carousel__arrow--prev" aria-label="上一張">
@@ -340,8 +342,8 @@
                                 </p>
                             </div>
 
-                            <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
-                                class="product-card__cta">
+                            <a href="https://shopee.tw/%E3%80%90%E8%83%96%E5%A4%A7%E5%96%B5%E3%80%91%F0%9F%94%A5%E5%8F%B0%E7%81%A3%E7%8F%BE%E8%B2%A8-%E9%80%81%E5%A4%A7%E8%B2%93%E9%8F%9F%F0%9F%94%A5%E9%95%B7%E9%80%9A%E9%81%93%E6%8E%80%E8%93%8B%E5%BC%8F%E5%8D%8A%E5%B0%81%E9%96%89%E8%B2%93%E7%A0%82%E7%9B%86-%E8%B6%85%E5%A4%A7%E8%B2%93%E7%A0%82%E7%9B%86-%E5%A5%BD%E6%B8%85%E7%90%86%E9%98%B2%E5%B8%B6%E7%A0%82-%E8%82%A5%E8%B2%93%E9%81%A9%E7%94%A8-%E5%81%B4%E5%85%A5%E5%BC%8F%E8%B2%93%E7%A0%82%E7%9B%86-%E9%80%9A%E9%81%93%E5%BC%8F%E8%B2%93%E7%A0%82%E7%9B%86-i.40866222.11737075109?extraParams=%7B%22display_model_id%22%3A27366042352%7D"
+                                target="_blank" rel="noopener noreferrer" class="product-card__cta">
                                 看實拍 🐱
                             </a>
                         </div>
@@ -353,16 +355,17 @@
                         <div class="product-carousel">
                             <div class="product-carousel__slides">
                                 <div class="product-carousel__slide active">
-                                    <img src="assets/product-cage-1.jpg" alt="多貓家庭的大空間貓籠 - 主圖" loading="lazy"
+                                    <img src="assets/product-cat-cage-1.jpg" alt="胖大喵豪華閣樓式大型貓籠 - 一站式解決吃喝拉撒睡"
+                                        loading="lazy"
                                         onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🏠 貓籠實拍</div>';">
                                 </div>
                                 <div class="product-carousel__slide">
-                                    <img src="assets/product-cage-2.jpg" alt="拱門設計特寫" loading="lazy"
-                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🚪 拱門設計</div>';">
+                                    <img src="assets/product-cat-cage-2.jpg" alt="居家情境 - 貓咪舒適休息，主人在旁陪伴" loading="lazy"
+                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🚪 居家情境</div>';">
                                 </div>
                                 <div class="product-carousel__slide">
-                                    <img src="assets/product-cage-3.jpg" alt="居家情境" loading="lazy"
-                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🏠 居家情境</div>';">
+                                    <img src="assets/product-cat-cage-3.jpg" alt="多色可選 - 粉色、咖啡色、灰色、藍色" loading="lazy"
+                                        onerror="this.parentElement.innerHTML='<div class=\'product-carousel__placeholder\'>🎨 多色選擇</div>';">
                                 </div>
                             </div>
                             <button class="product-carousel__arrow product-carousel__arrow--prev" aria-label="上一張">
@@ -403,8 +406,8 @@
                                 </p>
                             </div>
 
-                            <a href="https://shopee.tw/xuanling67" target="_blank" rel="noopener noreferrer"
-                                class="product-card__cta">
+                            <a href="https://shopee.tw/%E3%80%90%E8%83%96%E5%A4%A7%E5%96%B5%E3%80%91%E8%B1%AA%E8%8F%AF%E9%96%A3%E6%A8%93%E5%BC%8F%E5%A4%A7%E5%9E%8B%E8%B2%93%E7%B1%A0%F0%9F%94%A5%E7%8F%BE%E8%B2%A8%E5%85%8D%E9%81%8B-%E5%A4%9A%E5%B1%A4%E8%A8%AD%E8%A8%88-%E8%87%AA%E5%B8%B6%E5%90%8A%E5%BA%8A%E5%BB%81%E6%89%80%F0%9F%94%A5%E9%90%B5%E8%A3%BD%E8%B2%93%E7%B1%A0-%E7%89%B9%E5%A4%A7%E8%99%9F%E5%8F%AF%E7%A7%BB%E5%8B%95%E8%B2%93%E8%88%8D-%E8%B6%85%E5%A4%A7%E7%A9%BA%E9%96%93%E8%B2%93%E7%B1%A0-%E5%A4%A7%E5%9E%8B-i.40866222.7210272194?extraParams=%7B%22display_model_id%22%3A122097970846%7D&is_from_login=true"
+                                target="_blank" rel="noopener noreferrer" class="product-card__cta">
                                 看實拍 🐱
                             </a>
                         </div>
